# cc-server

./: .gitignore  Cargo.toml
entity/: Cargo.toml
entity/src/: user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240126_102540_user_table.rs
src/: config.rs  db_connection.rs  lib.rs  main.rs  settings.rs  setup.rs
src/api/: helper.rs  mod.rs
src/api/account/: controller.rs  mod.rs  route.rs  service.rs
src/api/account/dtos/: create_account_dto.rs  login_account_dto.rs  mod.rs  new_user_dto.rs  update_profile.rs
src/api/auth/: mod.rs
src/api/auth/google/: google_openid.rs  mod.rs
src/api/routes/: account.rs  google_auth.rs  mod.rs
src/config/: default.toml  development.toml
src/handler/: errors.rs
