[package]
name = "collabs-code-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.scripts]
dev = "cargo watch -x 'run'"

[dependencies]
actix-web = "4.4.1"
serde = { version = "1.0.195", features = ["derive"] }
dotenv = "0.15.0"
config = "0.13.4"
env_logger = "0.11.0"
log = "0.4.20"
strum = "0.25.0"
strum_macros = "0.25.3"
derive_more = "0.99.17"
validator = { version = "0.16.1", features = ["derive"] }
bcrypt = "0.15.0"
futures = "0.3.30"
chrono = "0.4.32"
uuid = {version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
sea-orm = { version = "^0.12.12", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros" ] }


[dev-dependencies]
cargo-watch = "8.5.2"

