[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/mod.rs"

[dependencies]
serde = { version = "1.0.195", features = ["derive"]}
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm]
version = "0.12.12"
features = ["debug-print"]

