[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
uuid = {version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

[dependencies.sea-orm-migration]
version = "0.12.12"
features = [ "sqlx-sqlite", "runtime-async-std-native-tls"]
